gpu: Update client command buffer state on SignalSyncToken ack.

This avoids a data race between the result of IsSyncTokenSignaled, which
reads from the shared memory state copy, and the SignalSyncToken
callback which uses IPC.

BUG=767991
R=piman

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ideb4c20e9b8eaa5b9f0756783c45a5d3606a442b
Reviewed-on: https://chromium-review.googlesource.com/679438
Commit-Queue: Sunny Sachanandani <sunnyps@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503933}
Former-commit-id: 249fd030830af1663dc6c8fd5aa15088dae8f779